[package]
name = "rustinker"
version = "0.1.0"
authors = ["Efraim Weiss <efiwiss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plain = "0.2.3"
buffered_offset_reader = "0.6.0"
memoize = "0.1.7"
memmap = "0.7.0"
